[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "d2p"
version = "0.1.0"
description = "Docker-to-Python conversion system for running containers as native processes"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "Apache-2.0"}
authors = [
    {name = "Michael Maillet"},
    {name = "Damien Davison"},
    {name = "Sacha Davison"}
]
dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "psutil>=5.9",
    "tenacity>=8.0",
    "python-dotenv>=1.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
dev = [
    "black>=23.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "types-PyYAML>=6.0",
]

[project.scripts]
d2p = "d2p.CLI.main:main"

[project.urls]
Homepage = "https://github.com/Symbo-gif/Dock_Python"
Repository = "https://github.com/Symbo-gif/Dock_Python"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
